cluster/apps/potber/potber-client/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potber-client-staging
  namespace: potber
  labels:
    app: potber-client-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potber-client-staging
  template:
    metadata:
      labels:
        app: potber-client-staging
    spec:
      containers:
        - name: potber-client-staging
          image: spuxx/potber-client:main-20240820-170637-6c8f7377397bd8b88566420c0fa04781acca9984 # {"$imagepolicy": "potber:potber-client-staging"}
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/config
      volumes:
        - name: config
          configMap:
            name: potber-client-staging
